# proof-of-engagement

./: .gitignore  Anchor.toml  IMPLEMENTATION_NOTES.md  README.md  SETUP_COMPLETE.md  SMART_CONTRACT.md
programs/proof-of-engagement/: Cargo.toml
programs/proof-of-engagement/src/: lib.rs
proof-of-engagement-app/: BLOCKCHAIN_INTEGRATION_STATUS.md  PROVIDERS_SETUP.md  README.md  TESTING_GUIDE.md  THEME_SYSTEM.md  UI_UPDATE_GUIDE.md  analysis_options.yaml  pubspec.yaml  test_blockchain.sh
proof-of-engagement-app/android/app/: build.gradle.kts
proof-of-engagement-app/android/app/src/main/: AndroidManifest.xml
proof-of-engagement-app/ios/Runner/: Info.plist
proof-of-engagement-app/ios/Runner.xcodeproj/: project.pbxproj
proof-of-engagement-app/lib/: main.dart
proof-of-engagement-app/lib/core/config/: app_config.dart
proof-of-engagement-app/lib/core/router/: app_router.dart
proof-of-engagement-app/lib/core/theme/: app_theme.dart
proof-of-engagement-app/lib/core/theme/tokens/: tokens.dart  (+7 more)
proof-of-engagement-app/lib/shared/services/: instruction_builder.dart  pda_service.dart  phantom_wallet_service.dart  photo_service.dart  program_instructions.dart  qr_code_service.dart  solana_service.dart  wallet_service.dart
proof-of-engagement-app/linux/: CMakeLists.txt
proof-of-engagement-app/linux/runner/: my_application.cc
proof-of-engagement-app/macos/Flutter/: GeneratedPluginRegistrant.swift
proof-of-engagement-app/macos/Runner.xcodeproj/: project.pbxproj
proof-of-engagement-app/macos/Runner/Configs/: AppInfo.xcconfig
proof-of-engagement-app/test/: solana_integration_funded_test.dart  solana_integration_test.dart  widget_test.dart
proof-of-engagement-app/web/: index.html  manifest.json
proof-of-engagement-app/windows/: CMakeLists.txt
proof-of-engagement-app/windows/runner/: Runner.rc  main.cpp
(+35 files in other folders)
