[package]
name = "proof-of-engagement"
version = "0.1.0"
description = "Proof of Engagement - University Club Engagement Tracking on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_engagement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
spl-token = { version = "~4.0", features = ["no-entrypoint"] }
