[package]
name = "proof-of-engagement"
version = "0.1.0"
description = "Proof of Engagement - University Club Engagement Tracking on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_engagement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
